# usbip-windows-mirror

driver/: b.bat  createcert.bat
userspace/: configure.ac
userspace/libsrc/: Makefile.am  usbip.h  usbip_common.h
userspace/src/: Makefile.am  usbip.c  usbip_network.c  usbip_windows.c
